force-app/main/default/objects/Emsculpt_S__c/Emsculpt_S__c.object-meta.xml
<CustomObject>
    <label>Emsculpt(S)</label>
    <nameField>
        <label>Emsculpt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emsculpt(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>