force-app/main/default/objects/Emsculpt_S__c/fields/Emsculpt__c.field-meta.xml
<CustomField>
    <fullName>Emsculpt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emsculpt</label>
    <referenceTo>Emsculpt__c</referenceTo>
    <relationshipLabel>Emsculpt(S)</relationshipLabel>
    <relationshipName>Emsculpt_S</relationshipName>
    <type>Lookup</type>
</CustomField>