force-app/main/default/objects/Emsculpt_S__c/fields/Emsculpt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Emsculpt_Notes__c</fullName>
    <label>Emsculpt Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>