force-app/main/default/objects/Emsculpt_S__c/fields/Emsculpt_Tx_Time__c.field-meta.xml
<CustomField>
    <fullName>Emsculpt_Tx_Time__c</fullName>
    <label>Emsculpt Tx Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 mins</fullName>
            </value>
            <value>
                <fullName>60 mins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>